--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 before_install:
     - docker build -t vineet03/react-test -f ./client/Dockerfile.dev ./client
 script:
-    - docker run vineet03/react-test npm test -- --coverage
+    - docker run -e CI=true vineet03/react-test npm test
 after_success:
     - docker build -t vineet03/multi-client ./client
     - docker build -t vineet03/multi-nginx ./nginx
