--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "react-router-dom": "5.2.0",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "@testing-library/jest-dom": "5.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
